Change status embed

--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
+  <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="186308" async="async" type="text/javascript"></script>
   <body>
     <app-root></app-root>
   </body>
-  <script src="https://dylanwarrell.statuspage.io/embed/script.js"></script>
 </html>
