--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -8,6 +8,21 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="186308" async="async" type="text/javascript"></script>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {},
+      Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"),
+        s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = "https://embed.tawk.to/663a6e6907f59932ab3d0bc6/1hta3uj57";
+      s1.charset = "UTF-8";
+      s1.setAttribute("crossorigin", "*");
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
   <body>
     <app-root></app-root>
   </body>
